--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <script src="js/main.js"></script>
-    <script src="js/app.js"></script>
+    <!-- <script src="js/app.js"></script> -->
 </body>
 
 </html>
