--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <meta name="apple-mobile-web-app-title" content="Hello World">
     <meta name="msapplication-TileImage" content="images/hello-icon-144.png">
     <meta name="msapplication-TileColor" content="#FFFFFF">
+
+    <!-- Scripts -->
+    <script src="js/main.js" defer></script>
+    <script src="js/database.js" defer></script>
+    <script src="js/app.js" defer></script>
 </head>
 
 <body class="fullscreen">
@@ -27,10 +32,12 @@
 
     <h1>Record audio</h1>
     <div id="audio">
+        <input id="id" type="text" value="test">
         <p>
             <button id=startRecord onclick="startRecording()">Start</button>
             <button id=stopRecord onclick="stopRecording()">Stop</button>
         </p>
+      
         <p>
             <audio id=recordedAudio></audio>
         </p>
@@ -39,8 +46,13 @@
         </p>
     </div>
 
-    <script src="js/main.js"></script>
-    <script src="js/app.js"></script>
+    <h2>Sounds:</h2>
+
+    <div id="sounds">
+        
+    </div>
+
+  
 </body>
 
 </html>
