--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="js/main.js" defer></script>
     <script src="js/database.js" defer></script>
     <script src="js/app.js" defer></script>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="fullscreen">
